INDIGO-217 fix overflow & padding on translation modal.

--- a/war/src/main/webapp/engines/jahia-anthracite/_workflow.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_workflow.scss
@@ -522,6 +522,16 @@
 
 			}
 
+			.x-tab-panel .x-tab-panel-body {
+				overflow-y: scroll;
+				height: calc(100% - 94px) !important;
+
+				.x-form-label-left > .x-form-item:nth-child(2) {
+					margin-top: 24px;
+				}
+
+			}
+
 		}
 
 }
